- MFH fix for bug #31348 CachingIterator::rewind() leaks